// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TinyCardsList > renders correctly 1`] = `
<slide-y-transition-stub
  class="row"
  disabled="false"
  group="true"
  hideonleave="false"
  leaveabsolute="false"
  tag="div"
>
  
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon=""
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 1"
    />
  </v-col-stub>
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon=""
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 2"
    />
  </v-col-stub>
  
</slide-y-transition-stub>
`;

exports[`TinyCardsList > renders correctly with listItemIcon as Function 1`] = `
<slide-y-transition-stub
  class="row"
  disabled="false"
  group="true"
  hideonleave="false"
  leaveabsolute="false"
  tag="div"
>
  
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon="M20 12V7H22V13H20M20 17H22V15H20M10 13C12.67 13 18 14.34 18 17V20H2V17C2 14.34 7.33 13 10 13M10 4A4 4 0 0 1 14 8A4 4 0 0 1 10 12A4 4 0 0 1 6 8A4 4 0 0 1 10 4M10 14.9C7.03 14.9 3.9 16.36 3.9 17V18.1H16.1V17C16.1 16.36 12.97 14.9 10 14.9M10 5.9A2.1 2.1 0 0 0 7.9 8A2.1 2.1 0 0 0 10 10.1A2.1 2.1 0 0 0 12.1 8A2.1 2.1 0 0 0 10 5.9Z"
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 1"
    />
  </v-col-stub>
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon="M20 12V7H22V13H20M20 17H22V15H20M10 13C12.67 13 18 14.34 18 17V20H2V17C2 14.34 7.33 13 10 13M10 4A4 4 0 0 1 14 8A4 4 0 0 1 10 12A4 4 0 0 1 6 8A4 4 0 0 1 10 4M10 14.9C7.03 14.9 3.9 16.36 3.9 17V18.1H16.1V17C16.1 16.36 12.97 14.9 10 14.9M10 5.9A2.1 2.1 0 0 0 7.9 8A2.1 2.1 0 0 0 10 10.1A2.1 2.1 0 0 0 12.1 8A2.1 2.1 0 0 0 10 5.9Z"
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 2"
    />
  </v-col-stub>
  
</slide-y-transition-stub>
`;

exports[`TinyCardsList > renders correctly with listItemIcon as String 1`] = `
<slide-y-transition-stub
  class="row"
  disabled="false"
  group="true"
  hideonleave="false"
  leaveabsolute="false"
  tag="div"
>
  
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 1"
    />
  </v-col-stub>
  <v-col-stub
    class="ma-0 pa-0 pb-2"
    cols="12"
    lg="false"
    md="false"
    sm="false"
    tag="div"
    xl="false"
    xxl="false"
  >
    <list-card-stub
      buttonparams="[object Object]"
      cardbuttons=""
      flagiconcode=""
      icon="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
      primaryactiontext=""
      subtitlekeyvaluepairs="[object Object],[object Object]"
      title="test 2"
    />
  </v-col-stub>
  
</slide-y-transition-stub>
`;
